fix: improve selection with different block alignments

--- a/src/hyperblock/editor.scss
+++ b/src/hyperblock/editor.scss
@@ -4,3 +4,9 @@
  * CSS for just Backend enqueued after style.scss
  * which makes it higher in priority.
  */
+
+ [data-type="hyper/hyperblock"] {
+     > .wp-block {
+         position: relative;
+     }
+ }
