--- a/src/hyperblock/style.scss
+++ b/src/hyperblock/style.scss
@@ -9,7 +9,6 @@
   margin: 0 auto;
   padding: 0;
   height: 500px;
-  overflow: hidden;
   display: flex;
   align-items: flex-start;
   justify-content: center;
