--- a/src/hyperchild/editor.scss
+++ b/src/hyperchild/editor.scss
@@ -7,7 +7,12 @@
 
 .wp-block-hyper-hyperchild  {
   pointer-events: auto;
-  margin-top: -30px;
+
+  .block-editor-block-list__layout {
+    > * {
+      max-width: 100% !important;
+    }
+  }
 }
 
 [data-type="hyper/hyperchild"] {
@@ -27,6 +32,10 @@
       margin-top: 0 !important;
       margin-bottom: 0 !important;
     }
+  }
+
+  .wp-block-image .components-resizable-box__handle {
+    display: none !important;
   }
 }
 
