--- a/src/hyperchild/style.scss
+++ b/src/hyperchild/style.scss
@@ -8,11 +8,14 @@
   margin: 0;
   padding: 0;
   width: max-content;
+  max-width: 900px;
   height: auto;
   position: absolute;
 
   > * {
     margin-top: 0 !important;
     margin-bottom: 0 !important;
+    max-width: 100% !important;
   }
+
 }
